updated fingerprints and trying to add support for LTE

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -24,6 +24,6 @@
     <!-- The RadioAccessFamilies supported by the device.
          Empty is viewed as "all".  Only used on devices which
          don't support RIL_REQUEST_GET_RADIO_CAPABILITY
-         format is UMTS|LTE|... -->
-    <string translatable="false" name="config_radio_access_family">CDMA|EVDO|GSM|WCDMA</string>
+         format is UMTS|LTE|... JJEDIT: LTE ADDED TO THE LIST-->
+    <string translatable="false" name="config_radio_access_family">CDMA|EVDO|GSM|LTE|WCDMA</string>
 </resources>
